mobile navbar done.

--- a/imports/ui/containers/shared/Header.css
+++ b/imports/ui/containers/shared/Header.css
@@ -145,6 +145,14 @@
   width: 32px;
 }
 
+.ecommerce-cms-site-mobilelogo {
+  max-height: 50px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin-top: 3px;
+}
+
 .ecommerce-cms-header-background {
   position: relative;
 }
