--- a/imports/ui/containers/shared/Header.css
+++ b/imports/ui/containers/shared/Header.css
@@ -4,7 +4,7 @@
 }
 
 .ecommerce-cms-top-section {
-  background-color: #d8b827;
+  background-color: #c3a623;
   position: static;
   top: 0;
   width: 100%;
@@ -12,7 +12,7 @@
 }
 
 .ecommerce-cms-top-logo-row-wrapper-wrapper {
-  border-bottom: 1px solid #d8b827;
+  border-bottom: 1px solid #c3a623;
   position: fixed;
   top: 0;
   transform: translateZ(0);
@@ -21,7 +21,7 @@
 }
 
 .ecommerce-cms-top-logo-row-wrapper {
-    background: #d8b827;
+    background: #c3a623;
 }
 
 .ecommerce-cms-top-logo-row {
@@ -158,7 +158,6 @@
 }
 
 .ecommerce-cms-header-billboard {
-  background: #c3a623;
   padding: 24px;
   position: relative;
   text-align: center;
