--- a/imports/ui/components/styles/Header.css
+++ b/imports/ui/components/styles/Header.css
@@ -158,7 +158,7 @@
 }
 
 .ecommerce-cms-header-billboard {
-  padding: 24px;
+  padding: 10px;
   position: relative;
   text-align: center;
   z-index: 8888;
@@ -185,4 +185,31 @@ img {
   justify-content: center;
   position: relative;
   z-index: 7777;
+}
+
+#search-autocomplete-wrapper {
+  display: block !important;
+}
+
+.wall-logo-text {
+  font-family: 'Bodoni';
+  color: #fff;
+  font-weight: bold;
+}
+
+.wallville-logo-text {
+  font-size: 35px;
+}
+
+.ville-logo-text {
+  font-family: 'Kokila';
+  color: #fff;
+  font-weight: bold;
+  font-style: italic;
+}
+
+.decor-logo-text {
+  font-family: 'Century Gothic';
+  color: #fff;
+  font-weight: bold;
 }
