--- a/client/main.css
+++ b/client/main.css
@@ -232,10 +232,14 @@ input.image-gallery-selected {
 /* Product View Presentational Componenet CSS END*/
 
 #search-autocomplete {
-  padding: 11px 16px;
+ /* padding: 11px 16px;
   border-radius: 2px;
   border: 0 none;
+  outline: 0 none;*/
+  border-radius: 2px;
+  padding: 11px 16px;
   outline: 0 none;
+  border: 2px solid #000;
   font-size: 15px;
   width: 100%;
 }
