--- a/client/main.css
+++ b/client/main.css
@@ -236,10 +236,16 @@ input.image-gallery-selected {
   border-radius: 2px;
   border: 0 none;
   outline: 0 none;*/
-  border-radius: 2px;
+  /*border-radius: 2px;
   padding: 11px 16px;
   outline: 0 none;
   border: 2px solid #000;
+  font-size: 15px;
+  width: 100%;*/
+  padding: 11px 16px;
+  border-radius: 2px;
+  border: 0 none;
+  outline: 0 none;
   font-size: 15px;
   width: 100%;
 }
