--- a/client/main.css
+++ b/client/main.css
@@ -2,6 +2,11 @@
 body {
   margin: 0;
   background-color: #f7f7f7;
+   font-family: 'Lato', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto', sans-serif;
 }
 .dash-menu-item button svg {
 	color: #ffffff !important;
